[package]
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>", "Kenan Sulayman <kenan@sly.mn>"]
categories = ["development-tools", "memory-management"]
description = "trace allocations and deallocations"
keywords = ["allocator", "debugging"]
license = "MIT"
name = "tralloc"
readme = "README.md"
repository = "https://github.com/19h/tralloc"
version = "0.1.0"

[dependencies]
libc = "^0.2"
time = "^0.1"
